# aevol

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py  redis_client.py
backend/app/api/: datasets.py  deps.py  evaluations.py  experiments.py  metrics.py  reports.py  rubrics.py  runs.py  tasks.py  traces.py  workers.py
backend/app/core/: exceptions.py  logging.py  middleware.py
backend/app/models/: __init__.py  agent_trace.py  dataset.py  evaluation.py  experiment.py  failure_cluster.py  metric.py  report.py  rubric.py  run.py  task.py  trace.py  worker.py
backend/app/schemas/: dataset.py  evaluation.py  experiment.py  metric.py  report.py  rubric.py  run.py  task.py  trace.py  worker.py
backend/app/services/: cluster_service.py  dataset_service.py  experiment_service.py  metric_service.py  queue_service.py  report_service.py  rubric_service.py  run_service.py  task_service.py  trace_service.py  worker_service.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/datasets/: page.tsx
frontend/src/app/experiments/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/workers/: page.tsx
frontend/src/hooks/: useExperiments.ts  useSSE.ts  useWorkers.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
infra/nginx/: nginx.conf
infra/postgres/: init.sql
infra/redis/: redis.conf
scripts/: benchmark_workers.py  seed_demo_data.py
sdk/: pyproject.toml
sdk/agentjudge/: __init__.py  judge.py  schema.py
sdk/agentjudge/providers/: __init__.py  anthropic.py  base.py  openai.py
technical-plan/: overview.md
worker/: Dockerfile  pyproject.toml
worker/app/: config.py  consumer.py  heartbeat.py  main.py  registry.py  retry.py
worker/app/evaluators/: agent_trace.py  base.py  embedding_similarity.py  exact_match.py  llm_judge.py
worker/app/metrics/: collector.py
(+11 files in other folders)
