[project]
name = "agentjudge"
version = "0.1.0"
requires-python = ">=3.11"
description = "LLM-as-judge evaluation SDK for multi-agent applications"
dependencies = [
    "pydantic>=2.7",
    "anthropic>=0.28",
    "openai>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentjudge"]

[tool.ruff]
line-length = 100
