[project]
name = "eval-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "anthropic>=0.28",
    "openai>=1.35",
    "pydantic-settings>=2.3",
    "structlog>=24.0",
    "psutil>=5.9",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "asyncpg>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
